--- a/webdevbootcamp/workspace/Cars/Cars/package.json
+++ b/webdevbootcamp/workspace/Cars/Cars/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-sanitizer": "^1.0.5",
     "jade": "^1.11.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.18",
     "pug": "^2.0.3"
   }
